...

    object Fab {
      const val DISCOVER = "Discover Floating Action Button"
    }

    object Button {
      const val CLEAR_FILTERS = "Clear language button"
      const val SWITCH_VIEW = "Switch View Button"
    }

    object SearchBar {
      const val CLICKABLE_SEARCH_BAR = "Clickable Search Bar"
      const val SEARCH_BAR = "Search Bar focus status %s"
...
    const val STATUS_PILL = "Status Pill %s"
    const val MULTIPLE_SELECT_HEADER = "Multiple Select Header"
  }

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

  const val LAZY_COLUMN = "Lazy Column"

...
